# ED64

./: .gitignore  README.md  azure-pipelines.yml  readme.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  config.yml
.github/workflows/: build-ed64-example-rom.yml  build-usb64-linux.yml  build-usb64-windows.yml
ED64-XIO/: CMakeLists.txt  ED64-XIO.v64  Makefile  README.md  UpdateToolchain.ps1  bios.c  cmake-variants.json  disk.c  disk.h  everdrive.h  fmanager.c  header  incs.s  main.c  readme.txt  usb.bat
ED64-XIO/CMake/: toolchain-libdragon.cmake  toolchain-mips64.cmake
ED64-XIO/ff/: README.md  diskio.c  diskio.h  ffconf.h
ED64-XIO/inc/: bios.h  disk.h  everdrive.h  sys.h  types.h
ED64-XIO/lib/fatfs/: ff.h  ffconf.h
ED64-XIO/src/: bios.c  disk.c  fileio.c  fmanager.c  incs.s  main.c  sys.c  usb.c
ED64-XIO/tools/: usb.bat
docs/: hardware_identification.md  hardwareidentification.md  real_time_clock.md  realtimeclock.md  rom_config_database.md  sd_card.md  sdcard.md  table_of_contents.md  tableofcontent.md  tableofcontents.md  usb.md
usb64/: README.MD  README.md  readme.txt  usb64.sln
usb64/UnitTests/: CommadProcessorTests.cs  UnitTests.csproj
usb64/usb64/: CommandPacket.cs  CommandProcessor.cs  DeveloperRom.cs  ImageUtilities.cs  Program.cs  README.md  SafeSerialPort.cs  StorageOperations.cs  UsbInterface.cs  VSeriesOs2OfficialInterface.cs  usb64.csproj
usb64/usb64/NotImplementedYet/: OsInterfaceBase.cs  VSeriesOs2UnOfficialInterface.cs  XSeriesOs3Interface.cs
usb64/usb64/Properties/: AssemblyInfo.cs
